--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="toDoList">
             <h3>LISTA DE EVENTOS</h3>
             <div class="list" id="toDoList">
-                <div class="toDoItem done">
+                <!--<div class="toDoItem done">
                     <label>
                         <input type="checkbox" name="" id="">
                         <span class="bubble business"></span>
@@ -83,11 +83,12 @@
                         <button class="edit">Editar</button>
                         <button class="delete">Borrar</button>
                     </div>
-                </div>
+                </div>-->
             </div>
         </section>
     </main>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="./scripts/main.js"></script>
 </body>
 </html>
